crates/core/tests/snapshots/field_default_test__field_default__named_struct__renders_nothing_if_all_option_wrapped.snap
---
source: crates/core/tests/field_default_test.rs
expression: pretty(container.impl_partial_default_values())
---

