crates/core/tests/snapshots/field_default_test__field_default__named_struct__supports_bool-2.snap
---
source: crates/core/tests/field_default_test.rs
expression: pretty(container.impl_partial_default_values())
---
fn default_values(
    context: &Self::Context,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    Ok(Some(Self { a: Some(true) }))
}
