crates/core/tests/snapshots/field_default_test__field_default__named_struct__supports_number.snap
---
source: crates/core/tests/field_default_test.rs
expression: field.args.default.as_ref().unwrap()
---
Expr::Lit {
    attrs: [],
    lit: Lit::Int {
        token: 100,
    },
}
