crates/core/tests/snapshots/field_default_test__field_default__named_struct__supports_types-2.snap
---
source: crates/core/tests/field_default_test.rs
expression: defaults
---
{
    Ident(
        a,
    ): Some(
        Expr::Lit {
            attrs: [],
            lit: Lit::Bool {
                value: true,
            },
        },
    ),
    Ident(
        b,
    ): Some(
        Expr::Lit {
            attrs: [],
            lit: Lit::Int {
                token: 100,
            },
        },
    ),
    Ident(
        c,
    ): Some(
        Expr::Lit {
            attrs: [],
            lit: Lit::Str {
                token: "abc",
            },
        },
    ),
    Ident(
        d,
    ): Some(
        Expr::Array {
            attrs: [],
            bracket_token: Bracket,
            elems: [
                Expr::MethodCall {
                    attrs: [],
                    receiver: Expr::Lit {
                        attrs: [],
                        lit: Lit::Str {
                            token: "a",
                        },
                    },
                    dot_token: Dot,
                    method: Ident(
                        into,
                    ),
                    turbofish: None,
                    paren_token: Paren,
                    args: [],
                },
                Comma,
                Expr::MethodCall {
                    attrs: [],
                    receiver: Expr::Lit {
                        attrs: [],
                        lit: Lit::Str {
                            token: "b",
                        },
                    },
                    dot_token: Dot,
                    method: Ident(
                        into,
                    ),
                    turbofish: None,
                    paren_token: Paren,
                    args: [],
                },
                Comma,
                Expr::MethodCall {
                    attrs: [],
                    receiver: Expr::Lit {
                        attrs: [],
                        lit: Lit::Str {
                            token: "c",
                        },
                    },
                    dot_token: Dot,
                    method: Ident(
                        into,
                    ),
                    turbofish: None,
                    paren_token: Paren,
                    args: [],
                },
            ],
        },
    ),
    Ident(
        e,
    ): Some(
        Expr::Macro {
            attrs: [],
            mac: Macro {
                path: Path {
                    leading_colon: None,
                    segments: [
                        PathSegment {
                            ident: Ident(
                                vec,
                            ),
                            arguments: PathArguments::None,
                        },
                    ],
                },
                bang_token: Not,
                delimiter: MacroDelimiter::Bracket(
                    Bracket,
                ),
                tokens: TokenStream [
                    Literal {
                        lit: "a",
                    },
                    Punct {
                        char: ',',
                        spacing: Alone,
                    },
                    Literal {
                        lit: "b",
                    },
                    Punct {
                        char: ',',
                        spacing: Alone,
                    },
                    Literal {
                        lit: "c",
                    },
                ],
            },
        },
    ),
    Ident(
        f,
    ): Some(
        Expr::Tuple {
            attrs: [],
            paren_token: Paren,
            elems: [
                Expr::Lit {
                    attrs: [],
                    lit: Lit::Int {
                        token: 10,
                    },
                },
                Comma,
                Expr::Unary {
                    attrs: [],
                    op: UnOp::Neg(
                        Minus,
                    ),
                    expr: Expr::Lit {
                        attrs: [],
                        lit: Lit::Int {
                            token: 10,
                        },
                    },
                },
                Comma,
                Expr::Lit {
                    attrs: [],
                    lit: Lit::Int {
                        token: 0,
                    },
                },
            ],
        },
    ),
    Ident(
        no_default,
    ): None,
}
